add footer and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body class="antialiased">
 		<div id="app">
-			<div class=" lg:flex lg:flex-col lg:flex-row  ">
+			<div class=" flex flex-col lg:flex-row  ">
 				<nav class="bg-orange-600  lg:w-1/4 lg:max-h-screen  sticky top-0">
 					<div
 						class="hidden lg:block lg:m-6  rounded-full w-48 h-48 border-8 border-orange-700 "
@@ -70,261 +70,279 @@
 						</ul>
 					</div>
 				</nav>
-				<main class="flex flex-col m-16  text-gray-700 ">
-					<section class="my-6 " id="about">
-						<h1 class="text-6xl uppercase font-bold ">
-							Ray <span class="text-orange-600">Kudjie</span>
-						</h1>
-						<div class="uppercase leading-loose ">
-							<p>FullStack Developer</p>
-							<p>+233260946301</p>
-							<p class="text-orange-600">rkudjie@gmail.com</p>
-						</div>
-						<div class="leading-loose mt-12 font-sans text-lg">
-							<p>
-								I am a full-stack software engineer with a focus on the backend.
-								I built highly secured and performant systems using latest
-								industry trends
-							</p>
-							<p class="mt-4">
-								I am very enthusiastic about my work therefore I alwways ensure
-								I deliver excellent software systems.
-								<br />
-								When I'm not building web apps I read on Computer vision because
-								that's one of my areas of interest
-							</p>
-						</div>
-					</section>
-					<hr />
-					<section id="experience" class="my-6">
-						<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
-							Experience
-						</h1>
-						<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
-							<div class="w-4/5">
-								<h3 class="text-3xl font-medium text-gray-900">
-									FullStack Engineer
-								</h3>
-								<h5><span class="text-2xl">GloApps LLC</span>, Accra, Ghana</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">
-										Built Robust REST APIs
-									</li>
-									<li class="leading-loose text-gray-600">
-										3rd party APIs integration like Nexmo
-									</li>
-									<li class="leading-loose text-gray-600">
-										Designed and Built with a team a full-stack Insurance
-										Brokerage Software that include claim management, commission
-										tracking and Policy Management
-									</li>
-									<li class="leading-loose text-gray-600">
-										Improved database design to reduce query processing time
-									</li>
-									<li class="leading-loose text-gray-600">
-										Participated in site-wide back-end migration from Nodejs to
-										Laravel
-									</li>
-								</ul>
+				<main class="">
+					<div class="flex flex-col m-16  text-gray-700 ">
+						<section class="my-6 " id="about">
+							<h1 class="text-6xl uppercase font-bold ">
+								Ray <span class="text-orange-600">Kudjie</span>
+							</h1>
+							<div class="uppercase leading-loose ">
+								<p>FullStack Developer</p>
+								<p>+233260946301</p>
+								<p class="text-orange-600">rkudjie@gmail.com</p>
+								<p class="text-orange-600">
+									<a href="https://github.com/kudjieRaymond">GitHub</a>
+								</p>
 							</div>
-							<div>
-								<span class="text-orange-600 font-bold"
-									>Aug 2013 - Present</span
-								>
+							<div class="leading-loose mt-12 font-sans text-lg">
+								<p>
+									I am a full-stack software engineer with a focus on the
+									backend. I built highly secured and performant systems using
+									latest industry trends
+								</p>
+								<p class="mt-4">
+									I am very enthusiastic about my work therefore I alwways
+									ensure I deliver excellent software systems.
+									<br />
+									When I'm not building web apps I read on Computer vision
+									because that's one of my areas of interest
+								</p>
 							</div>
-						</div>
+						</section>
+						<hr />
+						<section id="experience" class="my-6">
+							<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
+								Experience
+							</h1>
+							<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
+								<div class="w-4/5">
+									<h3 class="text-3xl font-medium text-gray-900">
+										FullStack Engineer
+									</h3>
+									<h5>
+										<span class="text-2xl">GloApps LLC</span>, Accra, Ghana
+									</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">
+											Built Robust REST APIs
+										</li>
+										<li class="leading-loose text-gray-600">
+											3rd party APIs integration like Nexmo
+										</li>
+										<li class="leading-loose text-gray-600">
+											Designed and Built with a team a full-stack Insurance
+											Brokerage Software that include claim management,
+											commission tracking and Policy Management
+										</li>
+										<li class="leading-loose text-gray-600">
+											Improved database design to reduce query processing time
+										</li>
+										<li class="leading-loose text-gray-600">
+											Participated in site-wide back-end migration from Nodejs
+											to Laravel
+										</li>
+									</ul>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"
+										>Aug 2013 - Present</span
+									>
+								</div>
+							</div>
 
-						<div class="md:flex md:flex-row md:justify-between mt-2">
-							<div class="w-4/5">
-								<h3 class="text-3xl font-medium text-gray-900">
-									System Administrator
-								</h3>
-								<h5>
-									<span class="text-2xl">
-										United Nations Institute Of Natural Resources In Africa
-										(UNU-INRA)</span
-									>, Accra, Ghana
-								</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">
-										Managed network servers and technology tools
-									</li>
-									<li class="leading-loose text-gray-600">
-										Ensured Security through access controls, backups and
-										firewall
-									</li>
-									<li class="leading-loose text-gray-600">
-										Liaised with Headquarters in Tokyo to implement security
-										policies
-									</li>
-								</ul>
+							<div class="md:flex md:flex-row md:justify-between mt-2">
+								<div class="w-4/5">
+									<h3 class="text-3xl font-medium text-gray-900">
+										System Administrator
+									</h3>
+									<h5>
+										<span class="text-2xl">
+											United Nations Institute Of Natural Resources In Africa
+											(UNU-INRA)</span
+										>, Accra, Ghana
+									</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">
+											Managed network servers and technology tools
+										</li>
+										<li class="leading-loose text-gray-600">
+											Ensured Security through access controls, backups and
+											firewall
+										</li>
+										<li class="leading-loose text-gray-600">
+											Liaised with Headquarters in Tokyo to implement security
+											policies
+										</li>
+									</ul>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"
+										>September 2017 - August-2018</span
+									>
+								</div>
 							</div>
-							<div>
-								<span class="text-orange-600 font-bold"
-									>September 2017 - August-2018</span
-								>
+							<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
+								<div class="w-4/5">
+									<h3 class="text-3xl font-medium text-gray-900">
+										FullStack Engineer
+									</h3>
+									<h5>
+										<span class="text-2xl">GloApps LLC,</span> Accra, Ghana
+									</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">
+											Built an insurance brokerage comparison full-stack web
+											application for an insurance Broker which improved their
+											client conversion rate
+										</li>
+										<li class="leading-loose text-gray-600">
+											Designed and Implemented Databases for new applications
+										</li>
+									</ul>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"
+										>Sept 2016 - Jun 2017</span
+									>
+								</div>
 							</div>
-						</div>
-						<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
-							<div class="w-4/5">
-								<h3 class="text-3xl font-medium text-gray-900">
-									FullStack Engineer
-								</h3>
-								<h5><span class="text-2xl">GloApps LLC,</span> Accra, Ghana</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">
-										Built an insurance brokerage comparison full-stack web
-										application for an insurance Broker which improved their
-										client conversion rate
-									</li>
-									<li class="leading-loose text-gray-600">
-										Designed and Implemented Databases for new applications
-									</li>
-								</ul>
+							<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
+								<div class="w-4/5">
+									<h3 class="text-3xl font-medium text-gray-900">
+										Back-End Developer
+									</h3>
+									<h5>
+										<span class="text-2xl">Barge Studios</span>, Accra, Ghana
+									</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">
+											Implemented Server Side Logic Using PHP
+										</li>
+										<li class="leading-loose text-gray-600">
+											Built with a team an information system for a private
+											school that incorporated an attendance system and
+											automated the generation of reports for students
+										</li>
+									</ul>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"
+										>Sept 2015 - June 2016</span
+									>
+								</div>
 							</div>
-							<div>
-								<span class="text-orange-600 font-bold"
-									>Sept 2016 - Jun 2017</span
-								>
+						</section>
+						<!--end experience-->
+						<hr />
+						<section id="education" class="my-6">
+							<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
+								Education
+							</h1>
+							<div class="md:flex md:flex-row md:justify-between mb-6 mt-2">
+								<div>
+									<h5 class="text-lg ">Bsc Information Technology</h5>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"
+										>Sept 2013 - May2017</span
+									>
+								</div>
 							</div>
-						</div>
-						<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
-							<div class="w-4/5">
-								<h3 class="text-3xl font-medium text-gray-900">
-									Back-End Developer
-								</h3>
-								<h5>
-									<span class="text-2xl">Barge Studios</span>, Accra, Ghana
-								</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">
-										Implemented Server Side Logic Using PHP
-									</li>
-									<li class="leading-loose text-gray-600">
-										Built with a team an information system for a private school
-										that incorporated an attendance system and automated the
-										generation of reports for students
-									</li>
-								</ul>
+							<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
+								<div>
+									<h5 class="text-lg">
+										IBM Application Security Analyst - Mastery Award
+									</h5>
+								</div>
+								<div>
+									<span class="text-orange-600 font-bold"> December 2016 </span>
+								</div>
 							</div>
-							<div>
-								<span class="text-orange-600 font-bold"
-									>Sept 2015 - June 2016</span
-								>
+						</section>
+						<!--end education-->
+						<hr />
+						<section id="skills" class="my-6">
+							<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
+								Skills
+							</h1>
+							<div class="">
+								<div class="mb-8">
+									<h5 class="text-2xl">Languages, Frameworks and Libraries</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">PHP (Laravel)</li>
+										<li class="leading-loose text-gray-600">
+											JavaScript (Vue/React)
+										</li>
+										<li class="leading-loose text-gray-600">Python(Django)</li>
+									</ul>
+								</div>
+								<div class="mb-8">
+									<h5 class="text-2xl">Databases</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">MySql</li>
+										<li class="leading-loose text-gray-600">MongoDB</li>
+										<li class="leading-loose text-gray-600">FireBase</li>
+									</ul>
+								</div>
+								<div class="mb-8">
+									<h5 class="text-2xl">DevOps</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">Docker</li>
+										<li class="leading-loose text-gray-600">AWS</li>
+										<li class="leading-loose text-gray-600">
+											Linux System Administration
+										</li>
+									</ul>
+								</div>
+								<div class="mb-8">
+									<h5 class="text-2xl">Others</h5>
+									<ul class="text-loose mt-2 list-disc list-inside">
+										<li class="leading-loose text-gray-600">Git</li>
+										<li class="leading-loose text-gray-600">REST API</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-					</section>
-					<!--end experience-->
-					<hr />
-					<section id="education" class="my-6">
-						<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
-							Education
-						</h1>
-						<div class="md:flex md:flex-row md:justify-between mb-6 mt-2">
-							<div>
-								<h5 class="text-lg ">Bsc Information Technology</h5>
-							</div>
-							<div>
-								<span class="text-orange-600 font-bold"
-									>Sept 2013 - May2017</span
-								>
-							</div>
-						</div>
-						<div class="md:flex md:flex-row md:justify-between mb-10 mt-2">
-							<div>
-								<h5 class="text-lg">
-									IBM Application Security Analyst - Mastery Award
-								</h5>
-							</div>
-							<div>
-								<span class="text-orange-600 font-bold"> December 2016 </span>
-							</div>
-						</div>
-					</section>
-					<!--end education-->
-					<hr />
-					<section id="skills" class="my-6">
-						<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
-							Skills
-						</h1>
-						<div class="">
-							<div class="mb-8">
-								<h5 class="text-2xl">Languages, Frameworks and Libraries</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">PHP (Laravel)</li>
-									<li class="leading-loose text-gray-600">
-										JavaScript (Vue/React)
-									</li>
-									<li class="leading-loose text-gray-600">Python(Django)</li>
-								</ul>
-							</div>
-							<div class="mb-8">
-								<h5 class="text-2xl">Databases</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">MySql</li>
-									<li class="leading-loose text-gray-600">MongoDB</li>
-									<li class="leading-loose text-gray-600">FireBase</li>
-								</ul>
-							</div>
-							<div class="mb-8">
-								<h5 class="text-2xl">DevOps</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">Docker</li>
-									<li class="leading-loose text-gray-600">AWS</li>
-									<li class="leading-loose text-gray-600">
-										Linux System Administration
-									</li>
-								</ul>
-							</div>
-							<div class="mb-8">
-								<h5 class="text-2xl">Others</h5>
-								<ul class="text-loose mt-2 list-disc list-inside">
-									<li class="leading-loose text-gray-600">Git</li>
-									<li class="leading-loose text-gray-600">REST API</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<!--end skills-->
-					<hr />
-					<section class="my-6" id="drop-me-line">
-						<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
-							Get In touch
-						</h1>
-						<form action="https://formspree.io/xggqpovx" method="POST">
-							<div class="mb-8 flex flex-col">
-								<label for="exampleEmailInput" class="text-lg"
-									>Your Email: <span class="text-red-700">*</span></label
-								>
-								<input
-									type="email"
-									placeholder="test@mailbox.com"
-									id="exampleEmailInput"
-									required
-									class="h-10 bg-gray-200 hover:bg-white border border-gray-500 rounded focus:outline-none focus:bg-white focus:shadow-outline focus:border-gray-300"
-								/>
-							</div>
-							<div class="flex flex-col">
-								<label for="exampleMessage" class="text-lg"
-									>Your Message: <span class="text-red-700">*</span></label
-								>
-								<textarea
-									name="message"
-									placeholder="Hi Ray …"
-									id="exampleMessage"
-									required
-									class="h-64 bg-gray-200 hover:bg-white border border-gray-500 rounded focus:outline-none focus:bg-white focus:shadow-outline focus:border-gray-300"
-								></textarea>
+						</section>
+						<!--end skills-->
+						<hr />
+						<section class="my-6" id="drop-me-line">
+							<h1 class="text-5xl uppercase font-bold text-gray-700 mb-10 mt-6">
+								Get In touch
+							</h1>
+							<form action="https://formspree.io/xggqpovx" method="POST">
+								<div class="mb-8 flex flex-col">
+									<label for="exampleEmailInput" class="text-lg"
+										>Your Email: <span class="text-red-700">*</span></label
+									>
+									<input
+										type="email"
+										placeholder="test@mailbox.com"
+										id="exampleEmailInput"
+										required
+										class="h-10 bg-gray-200 hover:bg-white border border-gray-500 rounded focus:outline-none focus:bg-white focus:shadow-outline focus:border-gray-300"
+									/>
+								</div>
+								<div class="flex flex-col">
+									<label for="exampleMessage" class="text-lg"
+										>Your Message: <span class="text-red-700">*</span></label
+									>
+									<textarea
+										name="message"
+										placeholder="Hi Ray …"
+										id="exampleMessage"
+										required
+										class="h-64 bg-gray-200 hover:bg-white border border-gray-500 rounded focus:outline-none focus:bg-white focus:shadow-outline focus:border-gray-300"
+									></textarea>
 
-								<input
-									class="mt-10 h-10  bg-blue-500 hover:bg-blue-700 text-white rounded-lg  focus:outline-none focus:shadow-outline "
-									type="submit"
-									value="Send"
-								/>
-							</div>
-						</form>
-					</section>
-					<!--end contact me-->
+									<input
+										class="mt-10 h-10  bg-blue-500 hover:bg-blue-700 text-white rounded-lg  focus:outline-none focus:shadow-outline "
+										type="submit"
+										value="Send"
+									/>
+								</div>
+							</form>
+						</section>
+						<!--end contact me-->
+					</div>
+
+					<footer class="bg-orange-600 h-16 text-white pt-6 text-center">
+						Built with
+						<span class="text-gray-700 hover:text-gray-900 font-bold"
+							><a href="https://tailwindcss.com" target="_blank"
+								>TailwindCss</a
+							></span
+						>
+					</footer>
 				</main>
 			</div>
 		</div>
