--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,7 @@
 									I am very enthusiastic about my work therefore I always
 									ensure I deliver excellent software systems.
 									<br />
-									When I'm not building web apps I read on Computer vision
-									because that's one of my areas of interest.
+									When I'm not building web apps I read on Computer vision.
 								</p>
 							</div>
 						</section>
@@ -350,14 +349,14 @@
 						<!--end contact me-->
 					</div>
 
-					<footer class="bg-orange-600 h-16 text-white pt-6 text-center">
+					<!-- <footer class="bg-orange-600 h-16 text-white pt-6 text-center">
 						Built with
 						<span class="text-gray-700 hover:text-gray-900 font-bold"
 							><a href="https://tailwindcss.com" target="_blank"
 								>TailwindCss</a
 							></span
 						>
-					</footer>
+					</footer> -->
 				</main>
 			</div>
 		</div>
